--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       crossorigin="anonymous"
     />
 
-    <title>Junior Bill - Teeth out now!</title>
+    <title>Junior Bill</title>
   </head>
   <body>
-    <section class="header">
+    <section class="header row">
       <div class="title">
         <img
           class="logo"
@@ -31,27 +31,41 @@
       </div>
 
       <iframe
+        class="justify-content-center"
         width="420"
         height="315"
         src="https://www.youtube.com/embed/tgbNymZ7vqY"
       >
       </iframe>
-      
+
+      <div class="cta container-fluid">
+        <h1 class="row">NEW SINGLE 'TEETH' OUT NOW</h1>
+        <div class="row">
+          <div class="col-6 footer-icon d-flex justify-content-center">
+            <a href="" target="_blank"><i class="fab fa-spotify fa-3x"></i></a>
+          </div>
+          <div class="col-6 footer-icon d-flex justify-content-center">
+            <a href="" target="_blank"
+              ><i class="fab fa-soundcloud fa-3x"></i
+            ></a>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="photo-collage"></section>
 
     <footer class="container-fluid">
       <div class="row">
-        <div class="col-4 footer-icon d-flex justify-content-center">
+        <div class="col-3 footer-icon d-flex justify-content-center">
           <a href="" target="_blank"><i class="fab fa-spotify fa-3x"></i></a>
         </div>
-        <div class="col-4 footer-icon d-flex justify-content-center">
+        <div class="col-3 footer-icon d-flex justify-content-center">
           <a href="" target="_blank"><i class="fab fa-instagram fa-3x"></i></a>
         </div>
-        <div class="col-4 footer-icon d-flex justify-content-center">
+        <div class="col-3 footer-icon d-flex justify-content-center">
           <a href="" target="_blank"><i class="fab fa-youtube fa-3x"></i></a>
         </div>
-        <div class="col-4 footer-icon d-flex justify-content-center">
+        <div class="col-3 footer-icon d-flex justify-content-center">
           <a href="" target="_blank"><i class="fab fa-soundcloud fa-3x"></i></a>
         </div>
       </div>
