--- a/index.html
+++ b/index.html
@@ -19,9 +19,24 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" href="./assets/css/index.css" />
+
     <title>Junior Bill</title>
   </head>
   <body>
+    <header class="bg-light">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-12">
+            <img
+              src="../junior-bill-homepage/assets/images/JB_Logo_Animation_Black.gif"
+              alt="Junior Bill"
+              class="img-fluid"
+            />
+          </div>
+        </div>
+      </div>
+    </header>
     <section class="header row">
       <div class="title">
         <img
@@ -29,14 +44,6 @@
           src="../junior-bill-homepage/assets/images/jb_logo_animation.gif"
         />
       </div>
-
-      <iframe
-        class="justify-content-center"
-        width="420"
-        height="315"
-        src="https://www.youtube.com/embed/tgbNymZ7vqY"
-      >
-      </iframe>
 
       <div class="cta container-fluid">
         <h1 class="row">NEW SINGLE 'TEETH' OUT NOW</h1>
@@ -52,21 +59,45 @@
         </div>
       </div>
     </section>
+    <section class="hero-video bg-dark">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-12">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe
+                class="embed-responsive-item"
+                allowfullscreen
+                width="420"
+                height="315"
+                src="https://www.youtube.com/embed/tgbNymZ7vqY"
+              >
+              </iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="photo-collage"></section>
 
-    <footer class="container-fluid">
-      <div class="row">
-        <div class="col-3 footer-icon d-flex justify-content-center">
-          <a href="" target="_blank"><i class="fab fa-spotify fa-3x"></i></a>
-        </div>
-        <div class="col-3 footer-icon d-flex justify-content-center">
-          <a href="" target="_blank"><i class="fab fa-instagram fa-3x"></i></a>
-        </div>
-        <div class="col-3 footer-icon d-flex justify-content-center">
-          <a href="" target="_blank"><i class="fab fa-youtube fa-3x"></i></a>
-        </div>
-        <div class="col-3 footer-icon d-flex justify-content-center">
-          <a href="" target="_blank"><i class="fab fa-soundcloud fa-3x"></i></a>
+    <footer class="bg-dark text-light py-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-3 footer-icon d-flex justify-content-center">
+            <a href="" target="_blank"><i class="fab fa-spotify fa-3x"></i></a>
+          </div>
+          <div class="col-3 footer-icon d-flex justify-content-center">
+            <a href="" target="_blank"
+              ><i class="fab fa-instagram fa-3x"></i
+            ></a>
+          </div>
+          <div class="col-3 footer-icon d-flex justify-content-center">
+            <a href="" target="_blank"><i class="fab fa-youtube fa-3x"></i></a>
+          </div>
+          <div class="col-3 footer-icon d-flex justify-content-center">
+            <a href="" target="_blank"
+              ><i class="fab fa-soundcloud fa-3x"></i
+            ></a>
+          </div>
         </div>
       </div>
     </footer>
