fixed bug with gif not loading

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="row align-items-center">
           <div class="col-12">
             <img
-              src="../junior-bill-homepage/assets/images/JB_Logo_Animation_Black.gif"
+              src="./assets/images/JB_Logo_Animation_Black.gif"
               alt="Junior Bill"
               class="img-fluid"
             />
@@ -38,13 +38,6 @@
       </div>
     </header>
     <section class="header row">
-      <div class="title">
-        <img
-          class="logo"
-          src="../junior-bill-homepage/assets/images/jb_logo_animation.gif"
-        />
-      </div>
-
       <div class="cta container-fluid">
         <h1 class="row">NEW SINGLE 'TEETH' OUT NOW</h1>
         <div class="row">
