added photo collage.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </div>
     </section>
-    <section class="hero-video bg-dark">
+    <section class="hero-video">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-12">
@@ -70,7 +70,19 @@
         </div>
       </div>
     </section>
-    <section class="photo-collage"></section>
+    <section class="photo-collage">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-12">
+            <img
+              src="./assets/images/picture-collage.png"
+              alt="Photos of the band."
+              class="img-fluid"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
 
     <footer class="bg-dark text-light py-3">
       <div class="container">
