Added cropped collage.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="row align-items-center">
           <div class="col-12">
             <img
-              src="./assets/images/picture-collage.png"
+              src="./assets/images/picture-collage-edit.png"
               alt="Photos of the band."
               class="img-fluid"
             />
@@ -84,7 +84,7 @@
       </div>
     </section>
 
-    <footer class="bg-dark text-light py-3">
+    <footer class="text-light py-3">
       <div class="container">
         <div class="row">
           <div class="col-3 footer-icon d-flex justify-content-center">
