restyled fontawesome icons.

--- a/index.html
+++ b/index.html
@@ -37,21 +37,7 @@
         </div>
       </div>
     </header>
-    <section class="header row">
-      <div class="cta container-fluid">
-        <h1 class="row">NEW SINGLE 'TEETH' OUT NOW</h1>
-        <div class="row">
-          <div class="col-6 footer-icon d-flex justify-content-center">
-            <a href="" target="_blank"><i class="fab fa-spotify fa-3x"></i></a>
-          </div>
-          <div class="col-6 footer-icon d-flex justify-content-center">
-            <a href="" target="_blank"
-              ><i class="fab fa-soundcloud fa-3x"></i
-            ></a>
-          </div>
-        </div>
-      </div>
-    </section>
+
     <section class="hero-video">
       <div class="container">
         <div class="row align-items-center">
@@ -70,6 +56,27 @@
         </div>
       </div>
     </section>
+
+    <section class="header row">
+      <div class="container-fluid">
+        <h1 class="col-12 justify-content-center d-flex cta">
+          NEW SINGLE 'TEETH' OUT NOW
+        </h1>
+        <div class="row">
+          <div class="col-6 footer-icon d-flex justify-content-center">
+            <a href="" target="_blank"
+              ><i class="fab fa-spotify fa-3x" id="social-logo"></i
+            ></a>
+          </div>
+          <div class="col-6 footer-icon d-flex justify-content-center">
+            <a href="" target="_blank"
+              ><i class="fab fa-soundcloud fa-3x" id="social-logo"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="photo-collage">
       <div class="container">
         <div class="row align-items-center">
@@ -88,19 +95,25 @@
       <div class="container">
         <div class="row">
           <div class="col-3 footer-icon d-flex justify-content-center">
-            <a href="" target="_blank"><i class="fab fa-spotify fa-3x"></i></a>
-          </div>
-          <div class="col-3 footer-icon d-flex justify-content-center">
-            <a href="" target="_blank"
-              ><i class="fab fa-instagram fa-3x"></i
+            <a
+              href="https://open.spotify.com/artist/250nqRYTUiSI6nnVXG5yXa"
+              target="_blank"
+              ><i class="fab fa-spotify fa-3x" id="social-logo"></i
             ></a>
           </div>
           <div class="col-3 footer-icon d-flex justify-content-center">
-            <a href="" target="_blank"><i class="fab fa-youtube fa-3x"></i></a>
+            <a href="https://www.instagram.com/juniorbillmusic/" target="_blank"
+              ><i class="fab fa-instagram fa-3x" id="social-logo"></i
+            ></a>
           </div>
           <div class="col-3 footer-icon d-flex justify-content-center">
-            <a href="" target="_blank"
-              ><i class="fab fa-soundcloud fa-3x"></i
+            <a href="https://youtube.com/juniorbillmusic" target="_blank"
+              ><i class="fab fa-youtube fa-3x" id="social-logo"></i
+            ></a>
+          </div>
+          <div class="col-3 footer-icon d-flex justify-content-center">
+            <a href="https://soundcloud.com/junior-bill" target="_blank"
+              ><i class="fab fa-soundcloud fa-3x" id="social-logo"></i
             ></a>
           </div>
         </div>
