added new gif header.

--- a/index.html
+++ b/index.html
@@ -18,18 +18,23 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bassa+Vah:wght@600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/index.css" />
 
     <title>Junior Bill</title>
   </head>
   <body>
-    <header class="bg-light">
+    <header>
       <div class="container">
         <div class="row align-items-center">
           <div class="col-12">
             <img
-              src="./assets/images/JB_Logo_Animation_Black.gif"
+              src="./assets/images/JB_Logo_Animation_LightOrange.gif"
               alt="Junior Bill"
               class="img-fluid"
             />
@@ -48,7 +53,7 @@
                 allowfullscreen
                 width="420"
                 height="315"
-                src="https://www.youtube.com/embed/tgbNymZ7vqY"
+                src="https://www.youtube.com/embed/DXf1I77iyuE"
               >
               </iframe>
             </div>
@@ -60,17 +65,30 @@
     <section class="header row">
       <div class="container-fluid">
         <h1 class="col-12 justify-content-center d-flex cta">
-          NEW SINGLE 'TEETH' OUT NOW
+          new single - Teeth - out now
         </h1>
+        <div class="container">
         <div class="row">
-          <div class="col-6 footer-icon d-flex justify-content-center">
-            <a href="" target="_blank"
+          <div class="col-3 footer-icon d-flex justify-content-center">
+            <a
+              href="https://open.spotify.com/artist/250nqRYTUiSI6nnVXG5yXa"
+              target="_blank"
               ><i class="fab fa-spotify fa-3x" id="social-logo"></i
             ></a>
           </div>
-          <div class="col-6 footer-icon d-flex justify-content-center">
-            <a href="" target="_blank"
-              ><i class="fab fa-soundcloud fa-3x" id="social-logo"></i
+          <div class="col-3 footer-icon d-flex justify-content-center">
+            <a href="https://www.instagram.com/juniorbillmusic/" target="_blank"
+              ><i class="fab fa-instagram fa-3x" id="social-logo"></i
+            ></a>
+          </div>
+          <div class="col-3 footer-icon d-flex justify-content-center">
+            <a href="https://youtube.com/juniorbillmusic" target="_blank"
+              ><i class="fab fa-youtube fa-3x" id="social-logo"></i
+            ></a>
+          </div>
+          <div class="col-3 footer-icon d-flex justify-content-center">
+            <a href="https://soundcloud.com/junior-bill" target="_blank"
+              ><i class="fab fa-bandcamp fa-3x" id="social-logo"></i
             ></a>
           </div>
         </div>
