--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bassa+Vah:wght@600&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/index.css" />
 
     <title>Junior Bill</title>
@@ -65,7 +64,7 @@
     <section class="header row">
       <div class="container-fluid">
         <h1 class="col-12 justify-content-center d-flex cta">
-          new single - Teeth - out now
+          new single -<span id="teeth-font"> Teeth </span>- out now
         </h1>
         <div class="container">
         <div class="row">
